--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["es2015", "stage-0"]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    "transform-react-jsx",
+    "transform-class-properties"
+  ]
 }
