--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "abq-luxury",
+  "name": "boilerplate",
   "version": "0.0.0",
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/start",
-    "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
+    "start": "node ./bin/start"
   },
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@babel/core": "^7.1.5",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/register": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.0.0",
@@ -21,11 +22,18 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-preset-flow": "^6.23.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.2.1"
+    "eslint-plugin-react": "^7.2.1",
+    "jest": "^23.6.0",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
