--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/start"
+    "start": "node ./bin/start",
+    "flow": "flow"
   },
   "dependencies": {
     "@babel/core": "^7.1.5",
@@ -31,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.2.1",
+    "flow-bin": "^0.86.0",
     "jest": "^23.6.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
