--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/start",
-    "flow": "flow"
+    "flow": "flow",
+    "lint": "xo"
   },
   "dependencies": {
     "@babel/core": "^7.1.5",
@@ -26,16 +27,65 @@
     "babel-preset-flow": "^6.23.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "eslint": "^4.5.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-xo": "^0.25.0",
+    "eslint-config-xo-react": "^0.17.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.2.1",
+    "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.86.0",
     "jest": "^23.6.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "xo": "^0.23.0"
+  },
+   "pre-commit": [
+    "lint"
+  ],
+  "xo": {
+    "parser": "babel-eslint",
+    "space": true,
+    "extends": [
+      "xo-react/space"
+    ],
+    "plugins": [
+      "babel"
+    ],
+    "rules": {
+      "babel/semi": true
+    },
+    "settings": {
+      "react": {
+        "version": "16.5"
+      }
+    },
+    "env": [
+      "browser",
+      "node"
+    ],
+    "ignore": [
+      "webpack/**/*.js",
+      "jest.config.js"
+    ],
+    "overrides": [
+      {
+        "files": "spec/**/*.js",
+        "globals": [
+          "jest",
+          "test",
+          "expect",
+          "describe",
+          "beforeAll",
+          "afterAll",
+          "beforeEach",
+          "afterEach"
+        ]
+      }
+    ]
   }
 }
