--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.1.5",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -20,11 +21,21 @@
     "debug": "^3.0.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
-    "serve-favicon": "^2.4.3"
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "serve-favicon": "^2.4.3",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "babel-preset-flow": "^6.23.0",
+    "babel-loader": "^8.0.4",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "^4.19.1",
@@ -44,7 +55,7 @@
     "redux-thunk": "^2.3.0",
     "xo": "^0.23.0"
   },
-   "pre-commit": [
+  "pre-commit": [
     "lint"
   ],
   "xo": {
