--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "node-sass": "^4.10.0",
+    "react": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.23.1",
@@ -52,9 +56,6 @@
     "flow-bin": "^0.86.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.6",
-    "react-redux": "^5.1.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "xo": "^0.23.0"
   },
   "pre-commit": [
