--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.1",
     "nodemon": "^1.18.6",
+    "pre-commit": "^1.2.2",
     "xo": "^0.23.0"
   },
   "pre-commit": [
